--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "dependencies": {
-    "@rails/actioncable": "^6.0.0-alpha",
-    "@rails/activestorage": "^6.0.0-alpha",
-    "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.2",
-    "stimulus": "^1.1.1",
-    "turbolinks": "^5.2.0"
+    "@rails/actioncable": "^6.0.0-rc1",
+    "@rails/activestorage": "^6.0.0-rc1",
+    "@rails/ujs": "^6.0.0-rc1",
+    "@rails/webpacker": "*",
+    "stimulus": "*",
+    "turbolinks": "*"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-class-property": "^1.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.17.0",
-    "webpack-dev-server": "^3.3.1"
+    "babel-eslint": "*",
+    "eslint": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-class-property": "*",
+    "eslint-plugin-prettier": "*",
+    "prettier": "*",
+    "webpack-dev-server": "*"
   },
   "scripts": {
     "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
